@@ -21,7 +21,7 @@
   <font size="4"><a href="http://www.unrealircd.com">http://www.unrealircd.com</a></font><br>
   <font size="4">Version: 3.2</font><br>
   <b>Current Version:</b> 3.2 RC1 *CVS*<br>
-  <b>Last doc update:</b> 2004-02-19</div>
+  <b>Last doc update:</b> 2004-03-02</div>
   <b>Head Coders:</b> Stskeeps / codemastr / Syzop / Luke / McSkaf<br>
   <b>Contributors:</b> Zogg / NiQuiL / assyrian / chasm / DrBin / llthangel / Griever / nighthawk<br>
   <b>Documentation:</b> CKnight^ / Syzop<br>
@@ -184,8 +184,8 @@ Windows:<br>
 <p><b>Installation Instructions</b><br>
 Linux:<br>
 <ol>
-<li>gunzip -d Unreal3.2-beta13.tar.gz
-<li>tar xvf Unreal3.2-beta13.tar
+<li>gunzip -d Unreal3.2-RC1.tar.gz
+<li>tar xvf Unreal3.2-RC1.tar
 <li>cd Unreal3.2
 <li>./Config
 <li>Answer these questions to the best of your knowledge. Generally if your not 
